fix metier